NetBSD Problem Report #44043

From jruohone@gmail.com  Thu Nov  4 20:37:12 2010
Return-Path: <jruohone@gmail.com>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 29FAB63BA68
	for <gnats-bugs@gnats.netbsd.org>; Thu,  4 Nov 2010 20:37:12 +0000 (UTC)
Message-Id: <20101104203705.C07E0F891@marx.bitnet>
Date: Thu,  4 Nov 2010 22:37:05 +0200 (EET)
From: Jukka Ruohonen <jruohonen@iki.fi>
Sender: a b <jruohone@gmail.com>
Reply-To: jruohonen@iki.fi
To: gnats-bugs@gnats.NetBSD.org
Subject: acpicpu(4) does not support rescan
X-Send-Pr-Version: 3.95

>Number:         44043
>Category:       kern
>Synopsis:       acpicpu(4) does not support rescan
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    jruoho
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Thu Nov 04 20:40:00 +0000 2010
>Closed-Date:    Wed Jun 22 08:50:47 +0000 2011
>Last-Modified:  Wed Jun 22 08:50:47 +0000 2011
>Originator:     Jukka Ruohonen
>Release:        NetBSD 5.99.x
>Organization:
-
>Environment:

>Description:

Noted by J. Kollasch: despite of being modular, acpicpu(4) does not support
rescan due use of RUN_ONCE(9).

>How-To-Repeat:

Code inspection.

>Fix:

Yes.

>Release-Note:

>Audit-Trail:

Responsible-Changed-From-To: kern-bug-people->jruoho
Responsible-Changed-By: jruoho@NetBSD.org
Responsible-Changed-When: Fri, 05 Nov 2010 06:11:24 +0000
Responsible-Changed-Why:
Mine.


From: "Jukka Ruohonen" <jruoho@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/44043 CVS commit: src/sys
Date: Wed, 22 Jun 2011 08:49:54 +0000

 Module Name:	src
 Committed By:	jruoho
 Date:		Wed Jun 22 08:49:54 UTC 2011

 Modified Files:
 	src/sys/arch/x86/acpi: acpi_cpu_md.c
 	src/sys/dev/acpi: acpi_cpu.c acpi_cpu.h acpi_cpu_cstate.c
 	    acpi_cpu_pstate.c acpi_cpu_tstate.c

 Log Message:
 Get rid of RUN_ONCE(9). Should fix PR # kern/44043.


 To generate a diff of this commit:
 cvs rdiff -u -r1.61 -r1.62 src/sys/arch/x86/acpi/acpi_cpu_md.c
 cvs rdiff -u -r1.43 -r1.44 src/sys/dev/acpi/acpi_cpu.c
 cvs rdiff -u -r1.41 -r1.42 src/sys/dev/acpi/acpi_cpu.h
 cvs rdiff -u -r1.52 -r1.53 src/sys/dev/acpi/acpi_cpu_cstate.c
 cvs rdiff -u -r1.50 -r1.51 src/sys/dev/acpi/acpi_cpu_pstate.c
 cvs rdiff -u -r1.29 -r1.30 src/sys/dev/acpi/acpi_cpu_tstate.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: jruoho@NetBSD.org
State-Changed-When: Wed, 22 Jun 2011 08:50:47 +0000
State-Changed-Why:
Fixed.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.