Get rid of RUN_ONCE(9). Should fix PR # kern/44043.